Temp fix to align votes correctly

--- a/frontend/app/styles/general/_test.sass
+++ b/frontend/app/styles/general/_test.sass
@@ -114,8 +114,14 @@
 .tooltip-votes
   margin-left: 20px
 
+.tooltip-votes-pan
+  margin-left: 16px
+
 .tooltip-percent
   float: right
+
+.tooltip-party
+  width: 10px
 
 .pan
   background-color: #446093
